--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,18 @@
 ---
-#Database details
-db_host: "localhost"
-db_port: "3306"
-db_name: "max_music_data"
-db_user: "max_ingestor"
-db_password: "Zv2MGcoR)KpIq#oEgF9]"
+db_info:
+  db_host: "localhost"
+  db_port: "3306"
+  db_name: "max_music_data"
+  db_user: "max_ingestor"
+  db_password: "Zv2MGcoR)KpIq#oEgF9]"
+  log_sql_statements: True
 
-#File characteristics
-field_delimiter: "\u0001"
-row_delimiter: "\u0002"  # The script contains handling for the "\n" character in each row delimiter
-comment_char: "#"
+file_structure:
+  field_delimiter: "\u0001"
+  row_delimiter: "\u0002"  # The script contains handling for the "\n" character in each row delimiter
+  comment_char: "#"
 
-#Inboxes for file ingestion
-ready_path: "./import/ready/"
-finished_path: "./import/finished/"
-failed_path: "./import/failed/"
-
-verbose: True
-log_sql_statements: True
-logger_config_path: "./logger.conf"
+inboxes:
+  ready_path: "./inboxes/ready/"
+  finished_path: "./inboxes/finished/"
+  failed_path: "./inboxes/failed/"
